--- a/Урок 5. Объекты/Examples/00_Object_creation/006_Methods.htm
+++ b/Урок 5. Объекты/Examples/00_Object_creation/006_Methods.htm
@@ -39,7 +39,7 @@
 
         human.show();
 
-        human.changeWork("<img src='Images/Perspectiva.jpg'/>");
+        human.changeWork("<img src='Images/Perspectiva.png'/>");
 
         human.show();
 
