--- a/Урок 5. Объекты/Examples/02_CustomConstructors/002_Props_and_methods.htm
+++ b/Урок 5. Объекты/Examples/02_CustomConstructors/002_Props_and_methods.htm
@@ -25,12 +25,14 @@
 
         // свойство функции конструктора (аналог статических свойств).
 
-         new Point(1, 2);
+         var a = new Point(1, 2);
          new Point(1, 2);
 
+        //a.
+            
         alert(Point.MaxPointCount);
 
-        //alert(a.z);
+        //alert(Point.z);
 
         // Метод функции-конструктора (аналог статическгого метода).
             </script>
