--- a/Урок 6. Работа с документами/Examples/02_JS_Module/BadPractice/001_BadPage.html
+++ b/Урок 6. Работа с документами/Examples/02_JS_Module/BadPractice/001_BadPage.html
@@ -5,10 +5,13 @@
     <script src="BadModule1.js"></script>
     <script src="BadModule2.js"></script>
 
-    <!--var name = "1";       
-    var name = "2";-->
-
+    
     <script>
+
+        //var name = "1";
+        //var name = "2";
+
+
         // из-за глобальной переменной name метод startModule1() и startModule2() будут выводить одинаковые значения.
         startModule1();
         startModule2();
