--- a/Урок 6. Работа с документами/Examples/03_Document/008_querySelectorAll.htm
+++ b/Урок 6. Работа с документами/Examples/03_Document/008_querySelectorAll.htm
@@ -9,7 +9,7 @@
 
         function loadHandler() {
            
-            var pArray = document.querySelectorAll(".testClass p");
+            var pArray = document.querySelectorAll("p");
 
             for (var i = 0; i < pArray.length; i++) {
                 pArray[i].style.border = "solid 1px red";
