--- a/Урок 5. Объекты/Examples/03_Prototype/003_Rectangle.html
+++ b/Урок 5. Объекты/Examples/03_Prototype/003_Rectangle.html
@@ -29,11 +29,13 @@
 
         // При попытке смены значения, которое было унаследовано от прототипа, в объекте будет создана копия свойства (свойство прототипа не изменится). 
         // Значение в прототипе может быть измененно только черзе операцию Rectangle.prototype.name
-        rect1.ввв = "first R";
+
+        rect2.ввв = "first R";
+
         Rectangle.prototype.name = "first rectangle";
 
-        document.write("После смены имени объекта rect1<br/>")
-        document.write("Имя прямоугольника 1 " + rect1.ввв + "<br />");
+        //document.write("После смены имени объекта rect2<br/>")
+        document.write("Имя прямоугольника 1 " + rect2.ввв + "<br />");
         document.write("Имя прямоугольника 2 " + rect2.name + "<br />");
 
     </script>
