--- a/Урок 6. Работа с документами/Examples/03_Document/001_DocumentWrite.htm
+++ b/Урок 6. Работа с документами/Examples/03_Document/001_DocumentWrite.htm
@@ -22,10 +22,18 @@
     </p>
 
     <!--Использование метода writeln-->
-    <pre style="padding: 8px; margin: 8px; color: Green; font-weight: bold; border: solid 1px black;"><script type="text/javascript">document.writeln("hello");document.writeln("world");</script>
+    <pre style="padding: 8px; margin: 8px; color: Green; font-weight: bold; border: solid 1px black;"><script type="text/javascript">
+    document.writeln("hello");
+    document.writeln("world");</script>
     </pre>
 
     <input type="button" value="Кнопка" onclick="ButtonHandler()" />
 
 </body>
+
+
+
+
+
+
 </html>
