--- a/Урок 6. Работа с документами/Examples/03_Document/003_getElementById.html
+++ b/Урок 6. Работа с документами/Examples/03_Document/003_getElementById.html
@@ -6,7 +6,7 @@
 <body>
     
     <p id="output">Hello world</p>
-    <a id="link" href="http://edu.cbsystematics.com">Education site</a>
+    <a id="link" href="http://www.xxi.kiev.ua/">Education site</a>
 
 
     <script type="text/javascript">
