--- a/Урок 6. Работа с документами/Examples/03_Document/004_getElementById.html
+++ b/Урок 6. Работа с документами/Examples/03_Document/004_getElementById.html
@@ -20,6 +20,6 @@
 </head>
 <body>
     <p id="output">Hello world</p>
-    <a id="link" href="http://edu.cbsystematics.com">Education site</a>
+    <a id="link" href="http://www.xxi.kiev.ua/">Education site</a>
 </body>
 </html>
