--- a/Урок 7. BOM/Examples/001_Windows/05_WindowOpen.htm
+++ b/Урок 7. BOM/Examples/001_Windows/05_WindowOpen.htm
@@ -11,6 +11,8 @@
 
             var w;
 
+            //window.close();
+
             function openButtonHandler() {
                 // первый параметр - html страница, которая будет загружена в новом окне.
                 // второй параметр - имя окна
@@ -42,7 +44,5 @@
 <body>
     <input type="button" id="openButton" value="Открыть" />
     <input type="button" id="closeButton" value="Закрыть" />
-
-
-</body>
+    </body>
 </html>
