--- a/Урок 8. DHTML/Examples/02_CSS_for_DHTML/001_Position.htm
+++ b/Урок 8. DHTML/Examples/02_CSS_for_DHTML/001_Position.htm
@@ -56,14 +56,15 @@
 </head>
 <body>
     <div id="divAbsolute">
-        <div id="divRelative"></div>
+        A
+        <div id="divRelative">R</div>
     </div>
 
     <div id="divFixed">
-        Fixed
+        F
     </div>
     <div>
-        <div id="divRelative"></div>
+        <div id="divRelative">R</div>
     </div>
 </body>
 </html>
