--- a/Урок 8. DHTML/Examples/03_DHTML/006_ColorAnimationHSL.htm
+++ b/Урок 8. DHTML/Examples/03_DHTML/006_ColorAnimationHSL.htm
@@ -19,7 +19,8 @@
 
         var color = 0;
 
-        setInterval(function () {
+        setInterval(function ()
+        {
             color = (color + 1) % 360;
             e.style.backgroundColor = "hsl(" + color + ", 100%, 50%)"; // hsl(0, 100%, 50%)
         }, 50);
