--- a/Урок 9. Events/02_DOM_Level_2/003_EventRouts.html
+++ b/Урок 9. Events/02_DOM_Level_2/003_EventRouts.html
@@ -17,24 +17,24 @@
         var isTunnel = false;
 
         window.onload = function () {
-            var e1 = document.getElementById("first");
-            var e2 = document.getElementById("second");
-            var e3 = document.getElementById("third");
+            var div1 = document.getElementById("first");
+            var div2 = document.getElementById("second");
+            var div3 = document.getElementById("third");
 
-            e1.addEventListener("click",
+            div1.addEventListener("click",
                 function () {
                     this.style.backgroundColor = "green";
                     alert("Обработчик DIV 1");
                 }, isTunnel);
 
-            e2.addEventListener("click",
+            div2.addEventListener("click",
                 function () {
                     this.style.backgroundColor = "yellow";
                     alert("Обработчик DIV 2");
                 }, isTunnel
             );
 
-            e3.addEventListener("click",
+            div3.addEventListener("click",
                 function () {
                     this.style.backgroundColor = "red";
                     alert("Обработчик DIV 3");
