--- a/Урок 9. Events/06_Event/003_MouseEventInterface_DOM.htm
+++ b/Урок 9. Events/06_Event/003_MouseEventInterface_DOM.htm
@@ -26,8 +26,8 @@
             message += "Alt: " + e.altKey + "<br />";       // true если клавиша Alt зажата.
             message += "Ctrl: " + e.ctrlKey + "<br />";     // true если клавиша Ctrl зажата.
             message += "Shift: " + e.shiftKey + "<br />";   // true если клавиша Shift заэата.
-            message += "X: " + e.clientX + "<br />";        // координаты относительно левого верхнего угла документа.
-            message += "Y: " + e.clientY + "<br />";        // координаты относительно левого верхнего угла документа.
+            message += "X: " + e.clientX + "<br />";        // координаты относительно левого верхнего угла видимой области  документа.
+            message += "Y: " + e.clientY + "<br />";        // координаты относительно левого верхнего угла видимой области  документа.
             message += "screen X: " + e.screenX + "<br />"; // координаты относительно экрана.
             message += "screen Y: " + e.screenY + "<br />"; // координаты относительно экрана.
             document.getElementById("output").innerHTML = message;
@@ -37,5 +37,44 @@
 <body>
     <div></div>
     <p id="output"></p>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+
+    <br />
 </body>
 </html>
