--- a/Урок 10. Формы/Examples/01_Form/001_FormObject.html
+++ b/Урок 10. Формы/Examples/01_Form/001_FormObject.html
@@ -17,7 +17,7 @@
         Имя <input type="text" value=" " /><br />
         Фамилия<input type="text" value=" " /><br />
 
-        <!--<p name=""></p>-->
+        <p name="">Hello</p>
 
         Возраст<textarea type="text" value=""> </textarea>
         <input type="button" value="Регистрация" />
