--- a/Урок 10. Формы/Examples/03_Validation/003_FormValidation.htm
+++ b/Урок 10. Формы/Examples/03_Validation/003_FormValidation.htm
@@ -18,7 +18,7 @@
         Name:
         <input type="text" name="userName"
                data-val="\S"
-               data-val-msg="Введите значение"  
+               data-val-msg="Введите значение неверно "  
                data-val-msg-id="userNameMsg" />
               <!--dataset.valMsgId-->
 
