--- a/Урок 14 Ajax/Examples/01_XmlHttpRequest/01_SyncRequest.html
+++ b/Урок 14 Ajax/Examples/01_XmlHttpRequest/01_SyncRequest.html
@@ -9,10 +9,10 @@
 
                 var xhr = new XMLHttpRequest();          // Создание объекта для HTTP запроса.
                 xhr.open("GET", "testfile.html", false); // Настройка объекта для отправки синхронного GET запроса
-                xhr.send();                              // Отправка запроса, так как запрос является синхронным, следующая строка кода выполнится только после получения ответа со стороны сервера.
+                xhr.send();                              // Отправка запроса, так как запрос является синхронным, следующая строка кода выполнится 
+                                                          //только после получения ответа со стороны сервера.
                 document.getElementById("output").innerHTML = xhr.responseText; // responseText - текст ответа полученного с сервера.
 
-                //alert("Hello");
             }
         }
     </script>
