--- a/Урок 15. Введение в JQuery/Examples/001_Starting_JQuery/003_Ready.html
+++ b/Урок 15. Введение в JQuery/Examples/001_Starting_JQuery/003_Ready.html
@@ -23,6 +23,7 @@
       $(document).ready(
         function () {
             alert('Структура страницы сформирована, можно приступать!');
+            var variable = $("p");
             $("p").text("Hello World (jQuery)");
         });
 
