--- a/Урок 15. Введение в JQuery/Examples/002_Basic_Selectors/003_SelectorMultiple.htm
+++ b/Урок 15. Введение в JQuery/Examples/002_Basic_Selectors/003_SelectorMultiple.htm
@@ -11,7 +11,7 @@
 
             // Выбор тегов "p" и "ul" на странице.
 
-            $("p,ul").css("color", "red");
+            $("p,ul").css("color", "red").css("font-size", "10px");
 
         });
 
