--- a/Урок 15. Введение в JQuery/Examples/002_Basic_Selectors/005_SelectorNeighborhoods.htm
+++ b/Урок 15. Введение в JQuery/Examples/002_Basic_Selectors/005_SelectorNeighborhoods.htm
@@ -19,7 +19,7 @@
 </head>
 <body>
     <p>Paragraph in body.</p>
-    <!-- <span> span </span> -->   
+     <span> span </span>    
     <div>
         <p>Paragraph in div.</p>
         <ul>
