--- a/Урок 16. Фильтры JQuery/Examples/001_Basic Filters/001_EvenOdd.htm
+++ b/Урок 16. Фильтры JQuery/Examples/001_Basic Filters/001_EvenOdd.htm
@@ -9,8 +9,8 @@
         // $("E:odd"); - выбор всех нечетных по значению элементов.
 
         $(function () {
-              $("p:even").css("background-color", "red");
-            //$("p:odd").css("background-color", "red");
+            //$("p:even").css("background-color", "red");
+            $("p:odd").css("background-color", "red");
         });
 
     </script>
