--- a/Урок 16. Фильтры JQuery/Examples/001_Basic Filters/002_FirstLast.htm
+++ b/Урок 16. Фильтры JQuery/Examples/001_Basic Filters/002_FirstLast.htm
@@ -9,12 +9,12 @@
         // $("E:last") - выбор последнего совпадения на странице.
 
         $(function () {
-          $(" ul:first li:first").css("color", "blue");
-          $(" ul:first li:last").css("color", "red");
+            $("li:first").css("color", "blue");
+            $("li:last").css("color", "red");
         });
 
     </script>
-</head> 
+</head>
 <body>
     <ul>
         <li>Item 1</li>
