--- a/Урок 16. Фильтры JQuery/Examples/001_Basic Filters/005_NthChild.htm
+++ b/Урок 16. Фильтры JQuery/Examples/001_Basic Filters/005_NthChild.htm
@@ -18,7 +18,7 @@
             $(".one tr:nth-child(7)").css("background-color", "lightblue");
             $(".two tr:nth-child(even)").css("background-color", "lightblue");
             $(".three tr:nth-child(odd)").css("background-color", "lightblue");
-            $(".four tr:nth-child(3n+1)").css("background-color", "lightblue");
+            $(".four tr:nth-child(2n)").css("background-color", "lightblue");
         });
 
     </script>
@@ -39,7 +39,7 @@
 <body>
     <h3>:nth-child(7)</h3>
     <table class="one">
-        <!--<caption>Рейтинг основных языков разработки (январь 2013)</caption>-->
+        <caption>Рейтинг основных языков разработки (январь 2013)</caption>
         <tr>
             <th>Место</th>
             <th>Язык</th>
