--- a/Урок 16. Фильтры JQuery/Examples/002_Content Filters/001_Contains.htm
+++ b/Урок 16. Фильтры JQuery/Examples/002_Content Filters/001_Contains.htm
@@ -10,7 +10,7 @@
         $(function () {
 
            // $("p:contains('JavaScript')").css("background-color", "red");
-          $("p:contains('сценарный')").css("background-color", "red");
+          $("p:contains('язык')").css("background-color", "red");
 
         });
 
