--- a/Урок 16. Фильтры JQuery/Examples/004_Form Filters/004_Disabled.html
+++ b/Урок 16. Фильтры JQuery/Examples/004_Form Filters/004_Disabled.html
@@ -11,14 +11,13 @@
 
                 $("input:disabled").val("disabled");
 
-                alert($("input:disabled").val());
             });
 
         </script>
     </head>
     <body>
         <form>
-            <input type="text" disabled="disabled" value=""/>
+            <input type="text" disabled="disabled" />
             <input type="text" />
         </form>
     </body>
