--- a/Урок 16. Фильтры JQuery/Examples/001_Basic Filters/002_FirstLast.htm
+++ b/Урок 16. Фильтры JQuery/Examples/001_Basic Filters/002_FirstLast.htm
@@ -9,8 +9,8 @@
         // $("E:last") - выбор последнего совпадения на странице.
 
         $(function () {
-            $("li:first").css("color", "blue");
-            $("li:last").css("color", "red");
+            $("ul > li:first").css("color", "blue");
+            $("ul > li:last").css("color", "red");
         });
 
     </script>
