--- a/Урок 16. Фильтры JQuery/Examples/003_More_attribute_filters/002_Not_value.htm
+++ b/Урок 16. Фильтры JQuery/Examples/003_More_attribute_filters/002_Not_value.htm
@@ -9,8 +9,8 @@
 
         $(function () {
 
-            //$("a[target=_blank]").css("background-color", "#9bff70");
-            $("a[target!=_blank]").css("background-color", "#9bff70");
+            $("a[target=_blank]").css("background-color", "#9bff70");
+           // $("a[target!=_blank]").css("background-color", "#9bff70");
 
         });
 
