--- a/Урок 16. Фильтры JQuery/Examples/004_Form Filters/001_Button.html
+++ b/Урок 16. Фильтры JQuery/Examples/004_Form Filters/001_Button.html
@@ -21,6 +21,7 @@
             Password <input type="text" value="" /><br />
             <input type="submit" value="Send" /><br />
             <input type="button" value="Show" />
+            <button>Button</button>
         </form>
     </body>
 </html>
