--- a/Урок 17.  Атрибуты и стили. JQuery/ClassWork/H_Task0.html
+++ b/Урок 17.  Атрибуты и стили. JQuery/ClassWork/H_Task0.html
@@ -1,17 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Выборка с помощью фильтра :has</title>
+    <title>Классная работа</title>
     <script src="jquery-1.10.2.js"></script>
     <script>
 
-        // :has - фильтр выбирает все элементы, которые содержат указанный в параметрах элемент
-
-        $(function () {
-            $("div:has(p)").css("background-color", "red");
-           //$("div:has(img)").css("background-color", "red");
-            //$("div:has(ol)").css("background-color", "red");
-        });
+        /* Ваш код */
 
     </script>
     <style>
