--- a/Урок 16. Фильтры JQuery/Examples/003_More_attribute_filters/002_Not_value.htm
+++ b/Урок 16. Фильтры JQuery/Examples/003_More_attribute_filters/002_Not_value.htm
@@ -17,7 +17,7 @@
     </script>
 </head>
 <body>
-    <a href="http://edu.cbsystematics.com/" target="_blank">Live education</a><br />
-    <a href="http://edu.cbsystematics.com/video/ru">Video education</a>
+    <a href="http://dinamicka.com" target="_blank">Dinamicka</a><br />
+    <a href="http://dinamicka.com">Dinamicka Development</a>
 </body>
 </html>
