--- a/Урок 18. Работа с DOM. JQuery/Examples/002_Insertion/002_Text(val).html
+++ b/Урок 18. Работа с DOM. JQuery/Examples/002_Insertion/002_Text(val).html
@@ -10,8 +10,8 @@
         $(function () {
 
             $("p").click(function () {
-                alert($(this).text());
-                //alert($(this).html());
+                $(this).text("<a href=\"#\">Link</a>");
+                //$(this).html("<a href=\"#\">Link</a>");
             });
 
         });
@@ -29,10 +29,7 @@
 </head>
 <body>
     <p>
-        <b>Test</b> string 1
-    </p>
-    <p>
-        Test string 2
+        Test string 1
     </p>
 </body>
 </html>
