--- a/Урок 18. Работа с DOM. JQuery/Examples/002_Insertion/005_Wrap().htm
+++ b/Урок 18. Работа с DOM. JQuery/Examples/002_Insertion/005_Wrap().htm
@@ -9,9 +9,7 @@
       // дополнительной структуры в документ без необходимости разрушения его первоначальных семантических свойств.
 
       // empty() - удаляет все содержимое из каждого элемента в наборе совпавших элементов.
-      // remove() - удаляет все совпавшие элементы из DOM. Эта функция НЕ удаляет элементы из объекта jQuery, 
-      // позволяя Вам воспользоваться ими позже. Обратите внимание, начиная с версии 1.2.2 эта функция также удаляет все обработчики событий и 
-      // внутренние закешированные данные.
+      // remove() - удаляет все совпавшие элементы из DOM. Эта функция НЕ удаляет элементы из объекта jQuery, позволяя Вам воспользоваться ими позже. Обратите внимание, начиная с версии 1.2.2 эта функция также удаляет все обработчики событий и внутренние закешированные данные.
 
         $(function () {
             $("span").wrap("<div>");
@@ -20,12 +18,8 @@
                 $("p").empty();
             });
 
-            var a = $("span");
-
             $("#removeBtn").click(function () {
                 $("span").remove();
-                alert(a.text());
-
             });
         });
 
@@ -42,8 +36,8 @@
     </style>
 </head>
 <body>
-    <span>Span</span>
-    <p>Paragraph</p>
+    <span>Paragraph</span>
+    <p>Hello world</p>
     <input type="button" value="Clear" id="clearBtn" />
     <input type="button" value="Remove" id="removeBtn" />
 </body>
