--- a/Урок 18. События и работа с DOM/Examples/002_Insertion/005_Wrap().htm
+++ b/Урок 18. События и работа с DOM/Examples/002_Insertion/005_Wrap().htm
@@ -11,6 +11,8 @@
       // empty() - удаляет все содержимое из каждого элемента в наборе совпавших элементов.
       // remove() - удаляет все совпавшие элементы из DOM. Эта функция НЕ удаляет элементы из объекта jQuery, позволяя Вам воспользоваться ими позже. Обратите внимание, начиная с версии 1.2.2 эта функция также удаляет все обработчики событий и внутренние закешированные данные.
 
+        // remove ?????????????????
+
         $(function () {
             $("span").wrap("<div>");
 
