--- a/Урок 19. Ajax в JQuery/Examples/AJAX_Basics_JavaScript/Samples/002_Ajax()/003_data.html
+++ b/Урок 19. Ajax в JQuery/Examples/AJAX_Basics_JavaScript/Samples/002_Ajax()/003_data.html
@@ -36,7 +36,8 @@
     Login <input id="login" type="text" />
     Password <input id="password" type="text" />
     <br />
-    <button>Войти</button> <span id="loader"> Загрузка</span>
+    <button>Войти</button>
+    <span id="loader"> Загрузка</span>
     <p id="output"></p>
 </body>
 </html>
